[gd_scene load_steps=3 format=3 uid="uid://dvoin538iby54"]

[ext_resource type="Theme" uid="uid://1xrgnmmnrnce" path="res://default_theme.theme" id="1_6d448"]
[ext_resource type="Script" path="res://src/MainMenu/MainMenu.gd" id="2_nm1fq"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("_new_game_button", "_checksum_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6d448")
script = ExtResource("2_nm1fq")
_new_game_button = NodePath("Panel/VBox/Margin/ButtonList/NewGameButton")
_checksum_label = NodePath("Panel/VBox/Margin2/VersionChecksumBox/ChecksumLabel")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Panel_MainMenu"

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 1.5
theme_override_font_sizes/font_size = 90
text = "OpenVic2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Margin" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 12

[node name="ButtonList" type="HBoxContainer" parent="Panel/VBox/Margin"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_type_variation = &"HBox_MainMenu_ButtonList"
theme_override_constants/separation = 18
alignment = 1

[node name="NewGameButton" type="Button" parent="Panel/VBox/Margin/ButtonList" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ExitButton")
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_right = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../ExitButton")
shortcut_context = NodePath("")
theme_type_variation = &"Button_MainMenu"
text = "New Game"
clip_text = true

[node name="ContinueButton" type="Button" parent="Panel/VBox/Margin/ButtonList"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../NewGameButton")
focus_neighbor_right = NodePath("../MultiplayerButton")
focus_next = NodePath("../MultiplayerButton")
focus_previous = NodePath("../NewGameButton")
theme_type_variation = &"Button_MainMenu"
disabled = true
text = "Continue"
clip_text = true

[node name="MultiplayerButton" type="Button" parent="Panel/VBox/Margin/ButtonList"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ContinueButton")
focus_neighbor_right = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../ContinueButton")
theme_type_variation = &"Button_MainMenu"
text = "Multiplayer"
clip_text = true

[node name="OptionsButton" type="Button" parent="Panel/VBox/Margin/ButtonList"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../MultiplayerButton")
focus_neighbor_right = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../MultiplayerButton")
theme_type_variation = &"Button_MainMenu"
text = "Options"
clip_text = true

[node name="ExitButton" type="Button" parent="Panel/VBox/Margin/ButtonList"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../OptionsButton")
focus_neighbor_right = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../OptionsButton")
theme_type_variation = &"Button_MainMenu"
text = "Exit"
clip_text = true

[node name="BottomSpace" type="Control" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="Margin2" type="MarginContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="VersionChecksumBox" type="HBoxContainer" parent="Panel/VBox/Margin2"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="Panel/VBox/Margin2/VersionChecksumBox"]
layout_mode = 2
tooltip_text = "OpenVic2 v0.01 \"Primum Mobile\""
mouse_filter = 1
text = "v0.01"

[node name="ChecksumLabel" type="Label" parent="Panel/VBox/Margin2/VersionChecksumBox"]
layout_mode = 2
tooltip_text = "Checksum 00000000"
mouse_filter = 1
theme_override_colors/font_color = Color(0.247059, 0.392157, 1, 1)
text = "(0000)"

[connection signal="pressed" from="Panel/VBox/Margin/ButtonList/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Panel/VBox/Margin/ButtonList/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Panel/VBox/Margin/ButtonList/MultiplayerButton" to="." method="_on_multi_player_button_pressed"]
[connection signal="pressed" from="Panel/VBox/Margin/ButtonList/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/VBox/Margin/ButtonList/ExitButton" to="." method="_on_exit_button_pressed"]
